--- a/Subject-wise/subject.html
+++ b/Subject-wise/subject.html
@@ -15,7 +15,7 @@
     <header>
         <nav class="navbar">
             <input type="checkbox" id="check">
-            <label for="check" class="checkbtn">
+            <label for="check uncheck1" class="checkbtn">
                 <i class="fa-solid fa-bars"></i>
             </label>
             <a class="logo" href="../index.html">AICTE</a>
@@ -65,93 +65,133 @@
             <h1>Physics Research Grants</h1>
             <ul class="grants">
                 <li>
-                    <h4 class="grant">
+                    <h4 class="grant" onclick="displayInfo1();">
                         Research Grant N0.1
-                        <i class="fa-solid fa-angle-down" id="checkbtn" onclick="displayInfo1();"></i>
+                        <i class="fa-solid fa-angle-down down-1"></i>
+                        <i class="fa-solid fa-angle-up up-1"></i>
                     </h4>
                     <p class="grant info" id="info1">
-                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Odio quasi possimus aperiam ratione dicta culpa quidem pariatur omnis dolorem sapiente! Est, veniam! Optio reiciendis delectus deserunt doloremque, ab facere. Quo voluptate, illum ea, blanditiis incidunt praesentium nobis perspiciatis, beatae impedit eos distinctio quibusdam ipsum in? Pariatur doloribus facere dolor eligendi?
+                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Odio quasi possimus aperiam ratione dicta culpa quidem pariatur omnis dolorem sapiente! Est, veniam! Optio reiciendis delectus deserunt doloremque, ab facere. Quo voluptate, illum ea, blanditiis incidunt praesentium nobis perspiciatis, beatae impedit eos distinctio quibusdam ipsum in? Pariatur doloribus facere dolor eligendi?<br>
+                        <span class="read-more">
+                            <a href="../Grant_Page/grant.html">Read More</a>
+                        </span>
                     </p>
                 </li>
                 <li>
-                    <h4 class="grant">
+                    <h4 class="grant" onclick="displayInfo2();">
                         Research Grant N0.2
-                        <i class="fa-solid fa-angle-down" id="checkbtn" onclick="displayInfo2();"></i>
+                        <i class="fa-solid fa-angle-down down-2"></i>
+                        <i class="fa-solid fa-angle-up up-2"></i>
                     </h4>
                     <p class="grant info" id="info2">
-                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Odio quasi possimus aperiam ratione dicta culpa quidem pariatur omnis dolorem sapiente! Est, veniam! Optio reiciendis delectus deserunt doloremque, ab facere. Quo voluptate, illum ea, blanditiis incidunt praesentium nobis perspiciatis, beatae impedit eos distinctio quibusdam ipsum in? Pariatur doloribus facere dolor eligendi?
+                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Odio quasi possimus aperiam ratione dicta culpa quidem pariatur omnis dolorem sapiente! Est, veniam! Optio reiciendis delectus deserunt doloremque, ab facere. Quo voluptate, illum ea, blanditiis incidunt praesentium nobis perspiciatis, beatae impedit eos distinctio quibusdam ipsum in? Pariatur doloribus facere dolor eligendi?<br>
+                        <span class="read-more">
+                            <a href="../Grant_Page/grant.html">Read More</a>
+                        </span>
                     </p>
                 </li>
                 <li>
-                    <h4 class="grant">
+                    <h4 class="grant" onclick="displayInfo3();">
                         Research Grant N0.3
-                        <i class="fa-solid fa-angle-down" id="checkbtn" onclick="displayInfo3();"></i>
+                        <i class="fa-solid fa-angle-down down-3"></i>
+                        <i class="fa-solid fa-angle-up up-3"></i>
                     </h4>
                     <p class="grant info" id="info3">
-                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Odio quasi possimus aperiam ratione dicta culpa quidem pariatur omnis dolorem sapiente! Est, veniam! Optio reiciendis delectus deserunt doloremque, ab facere. Quo voluptate, illum ea, blanditiis incidunt praesentium nobis perspiciatis, beatae impedit eos distinctio quibusdam ipsum in? Pariatur doloribus facere dolor eligendi?
+                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Odio quasi possimus aperiam ratione dicta culpa quidem pariatur omnis dolorem sapiente! Est, veniam! Optio reiciendis delectus deserunt doloremque, ab facere. Quo voluptate, illum ea, blanditiis incidunt praesentium nobis perspiciatis, beatae impedit eos distinctio quibusdam ipsum in? Pariatur doloribus facere dolor eligendi?<br>
+                        <span class="read-more">
+                            <a href="../Grant_Page/grant.html">Read More</a>
+                        </span>
                     </p>
                 </li>
                 <li>
-                    <h4 class="grant">
+                    <h4 class="grant" onclick="displayInfo4();">
                         Research Grant N0.4
-                        <i class="fa-solid fa-angle-down" id="checkbtn" onclick="displayInfo4();"></i>
+                        <i class="fa-solid fa-angle-down down-4"></i>
+                        <i class="fa-solid fa-angle-up up-4"></i>
                     </h4>
                     <p class="grant info" id="info4">
-                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Odio quasi possimus aperiam ratione dicta culpa quidem pariatur omnis dolorem sapiente! Est, veniam! Optio reiciendis delectus deserunt doloremque, ab facere. Quo voluptate, illum ea, blanditiis incidunt praesentium nobis perspiciatis, beatae impedit eos distinctio quibusdam ipsum in? Pariatur doloribus facere dolor eligendi?
+                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Odio quasi possimus aperiam ratione dicta culpa quidem pariatur omnis dolorem sapiente! Est, veniam! Optio reiciendis delectus deserunt doloremque, ab facere. Quo voluptate, illum ea, blanditiis incidunt praesentium nobis perspiciatis, beatae impedit eos distinctio quibusdam ipsum in? Pariatur doloribus facere dolor eligendi?<br>
+                        <span class="read-more">
+                            <a href="../Grant_Page/grant.html">Read More</a>
+                        </span>
                     </p>
                 </li>
                 <li>
-                    <h4 class="grant">
+                    <h4 class="grant" onclick="displayInfo5();">
                         Research Grant N0.5
-                        <i class="fa-solid fa-angle-down" id="checkbtn" onclick="displayInfo5();"></i>
+                        <i class="fa-solid fa-angle-down down-5"></i>
+                        <i class="fa-solid fa-angle-up up-5"></i>
                     </h4>
                     <p class="grant info" id="info5">
-                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Odio quasi possimus aperiam ratione dicta culpa quidem pariatur omnis dolorem sapiente! Est, veniam! Optio reiciendis delectus deserunt doloremque, ab facere. Quo voluptate, illum ea, blanditiis incidunt praesentium nobis perspiciatis, beatae impedit eos distinctio quibusdam ipsum in? Pariatur doloribus facere dolor eligendi?
+                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Odio quasi possimus aperiam ratione dicta culpa quidem pariatur omnis dolorem sapiente! Est, veniam! Optio reiciendis delectus deserunt doloremque, ab facere. Quo voluptate, illum ea, blanditiis incidunt praesentium nobis perspiciatis, beatae impedit eos distinctio quibusdam ipsum in? Pariatur doloribus facere dolor eligendi?<br>
+                        <span class="read-more">
+                            <a href="../Grant_Page/grant.html">Read More</a>
+                        </span>
                     </p>
                 </li>
                 <li>
-                    <h4 class="grant">
+                    <h4 class="grant" onclick="displayInfo6();">
                         Research Grant N0.6
-                        <i class="fa-solid fa-angle-down" id="checkbtn" onclick="displayInfo6();"></i>
+                        <i class="fa-solid fa-angle-down down-6"></i>
+                        <i class="fa-solid fa-angle-up up-6"></i>
                     </h4>
                     <p class="grant info" id="info6">
-                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Odio quasi possimus aperiam ratione dicta culpa quidem pariatur omnis dolorem sapiente! Est, veniam! Optio reiciendis delectus deserunt doloremque, ab facere. Quo voluptate, illum ea, blanditiis incidunt praesentium nobis perspiciatis, beatae impedit eos distinctio quibusdam ipsum in? Pariatur doloribus facere dolor eligendi?
+                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Odio quasi possimus aperiam ratione dicta culpa quidem pariatur omnis dolorem sapiente! Est, veniam! Optio reiciendis delectus deserunt doloremque, ab facere. Quo voluptate, illum ea, blanditiis incidunt praesentium nobis perspiciatis, beatae impedit eos distinctio quibusdam ipsum in? Pariatur doloribus facere dolor eligendi?<br>
+                        <span class="read-more">
+                            <a href="../Grant_Page/grant.html">Read More</a>
+                        </span>
                     </p>
                 </li>
                 <li>
-                    <h4 class="grant">
+                    <h4 class="grant" onclick="displayInfo7();">
                         Research Grant N0.7
-                        <i class="fa-solid fa-angle-down" id="checkbtn" onclick="displayInfo7();"></i>
+                        <i class="fa-solid fa-angle-down down-7"></i>
+                        <i class="fa-solid fa-angle-up up-7"></i>
                     </h4>
                     <p class="grant info" id="info7">
-                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Odio quasi possimus aperiam ratione dicta culpa quidem pariatur omnis dolorem sapiente! Est, veniam! Optio reiciendis delectus deserunt doloremque, ab facere. Quo voluptate, illum ea, blanditiis incidunt praesentium nobis perspiciatis, beatae impedit eos distinctio quibusdam ipsum in? Pariatur doloribus facere dolor eligendi?
+                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Odio quasi possimus aperiam ratione dicta culpa quidem pariatur omnis dolorem sapiente! Est, veniam! Optio reiciendis delectus deserunt doloremque, ab facere. Quo voluptate, illum ea, blanditiis incidunt praesentium nobis perspiciatis, beatae impedit eos distinctio quibusdam ipsum in? Pariatur doloribus facere dolor eligendi?<br>
+                        <span class="read-more">
+                            <a href="../Grant_Page/grant.html">Read More</a>
+                        </span>
                     </p>
                 </li>
                 <li>
-                    <h4 class="grant">
+                    <h4 class="grant" onclick="displayInfo8();">
                         Research Grant N0.8
-                        <i class="fa-solid fa-angle-down" id="checkbtn" onclick="displayInfo8();"></i>
+                        <i class="fa-solid fa-angle-down down-8"></i>
+                        <i class="fa-solid fa-angle-up up-8"></i>
                     </h4>
                     <p class="grant info" id="info8">
-                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Odio quasi possimus aperiam ratione dicta culpa quidem pariatur omnis dolorem sapiente! Est, veniam! Optio reiciendis delectus deserunt doloremque, ab facere. Quo voluptate, illum ea, blanditiis incidunt praesentium nobis perspiciatis, beatae impedit eos distinctio quibusdam ipsum in? Pariatur doloribus facere dolor eligendi?
+                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Odio quasi possimus aperiam ratione dicta culpa quidem pariatur omnis dolorem sapiente! Est, veniam! Optio reiciendis delectus deserunt doloremque, ab facere. Quo voluptate, illum ea, blanditiis incidunt praesentium nobis perspiciatis, beatae impedit eos distinctio quibusdam ipsum in? Pariatur doloribus facere dolor eligendi?<br>
+                        <span class="read-more">
+                            <a href="../Grant_Page/grant.html">Read More</a>
+                        </span>
                     </p>
                 </li>
                 <li>
-                    <h4 class="grant">
+                    <h4 class="grant" onclick="displayInfo9();">
                         Research Grant N0.9
-                        <i class="fa-solid fa-angle-down" id="checkbtn" onclick="displayInfo9();"></i>
+                        <i class="fa-solid fa-angle-down down-9"></i>
+                        <i class="fa-solid fa-angle-up up-9"></i>
                     </h4>
                     <p class="grant info" id="info9">
-                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Odio quasi possimus aperiam ratione dicta culpa quidem pariatur omnis dolorem sapiente! Est, veniam! Optio reiciendis delectus deserunt doloremque, ab facere. Quo voluptate, illum ea, blanditiis incidunt praesentium nobis perspiciatis, beatae impedit eos distinctio quibusdam ipsum in? Pariatur doloribus facere dolor eligendi?
+                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Odio quasi possimus aperiam ratione dicta culpa quidem pariatur omnis dolorem sapiente! Est, veniam! Optio reiciendis delectus deserunt doloremque, ab facere. Quo voluptate, illum ea, blanditiis incidunt praesentium nobis perspiciatis, beatae impedit eos distinctio quibusdam ipsum in? Pariatur doloribus facere dolor eligendi?<br>
+                        <span class="read-more">
+                            <a href="../Grant_Page/grant.html">Read More</a>
+                        </span>
                     </p>
                 </li>
                 <li>
-                    <h4 class="grant">
+                    <h4 class="grant" onclick="displayInfo10();">
                         Research Grant N0.10
-                        <i class="fa-solid fa-angle-down" id="checkbtn" onclick="displayInfo10();"></i>
+                        <i class="fa-solid fa-angle-down down-10"></i>
+                        <i class="fa-solid fa-angle-up up-10"></i>
                     </h4>
                     <p class="grant info" id="info10">
-                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Odio quasi possimus aperiam ratione dicta culpa quidem pariatur omnis dolorem sapiente! Est, veniam! Optio reiciendis delectus deserunt doloremque, ab facere. Quo voluptate, illum ea, blanditiis incidunt praesentium nobis perspiciatis, beatae impedit eos distinctio quibusdam ipsum in? Pariatur doloribus facere dolor eligendi?
+                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Odio quasi possimus aperiam ratione dicta culpa quidem pariatur omnis dolorem sapiente! Est, veniam! Optio reiciendis delectus deserunt doloremque, ab facere. Quo voluptate, illum ea, blanditiis incidunt praesentium nobis perspiciatis, beatae impedit eos distinctio quibusdam ipsum in? Pariatur doloribus facere dolor eligendi?<br>
+                        <span class="read-more">
+                            <a href="../Grant_Page/grant.html">Read More</a>
+                        </span>
                     </p>
                 </li>
             </ul>
