--- a/index.html
+++ b/index.html
@@ -249,6 +249,12 @@
         </div>
     </footer>
 
+    <!-- Loader -->
+
+    <div class="loader-wrapper">
+        <span class="loader"><span class="loader-inner"></span></span>
+    </div>
+
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.js"></script>
     <script src="./slick-slider/js/slick.js" type="text/javascript"></script>
     <script src="app.js"></script>
