--- a/index.html
+++ b/index.html
@@ -251,8 +251,13 @@
 
     <!-- Loader -->
 
-    <div class="loader-wrapper">
-        <span class="loader"><span class="loader-inner"></span></span>
+    <div class="load-container">
+        <div class="span-container">
+          <span class="span one"></span>
+          <span class="span two"></span>
+          <span class="span three"></span>
+          <span class="span four"></span>
+        </div>
     </div>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.js"></script>
