--- a/index.html
+++ b/index.html
@@ -251,14 +251,14 @@
 
     <!-- Loader -->
 
-    <!-- <div class="load-container">
+    <div class="load-container">
         <div class="span-container">
           <span class="span one"></span>
           <span class="span two"></span>
           <span class="span three"></span>
           <span class="span four"></span>
         </div>
-    </div> -->
+    </div>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.js"></script>
     <script src="./slick-slider/js/slick.js" type="text/javascript"></script>
