--- a/Contact/contact.html
+++ b/Contact/contact.html
@@ -100,6 +100,21 @@
             <p>Copyright ©  2022 - kvenkatamar. All Rights Reserved</p>
         </div>
     </footer>
+
+    <!-- Loader -->
+
+    <div class="load-container">
+        <div class="span-container">
+          <span class="span one"></span>
+          <span class="span two"></span>
+          <span class="span three"></span>
+          <span class="span four"></span>
+        </div>
+    </div>
+
+    
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.js"></script>
+    <script src="app.js"></script>
 </body>
 
 </html>
