--- a/Add_New_Grant/new.html
+++ b/Add_New_Grant/new.html
@@ -103,7 +103,7 @@
                         <label for="website-link">Official Website Link<span class="required">*</span></label>
                         <input type="url" required>
                     </li>
-                    <li>
+                    <li class="buttons">
                         <input type="submit" value="CANCEL" class="cancel">
                         <input type="submit" value="SAVE" class="save">
                     </li>
