--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Research Grants searching site</title>
 
-    <link rel = "icon" href = "img/logo.png" type = "image/x-icon" class = "icon">
+    <link rel = "icon" href = "img/favicon.png">
 
     <script src="https://kit.fontawesome.com/6a059858c5.js" crossorigin="anonymous"></script>
     <!-- Slick Slider -->
@@ -24,7 +24,7 @@
             <label for="check" class="checkbtn">
                 <i class="fa-solid fa-bars"></i>
             </label>
-            <a class="logo" href="index.html">AICTE</a>
+            <a class="logo" href="index.html"><img src="img/logo.png" alt=""></a>
             <ul>
                 <li><a class="active" href="index.html">Home</a></li>
                 <li class="dropdown">
