--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <label for="check" class="checkbtn">
                 <i class="fa-solid fa-bars"></i>
             </label>
-            <a class="logo" href="index.html"><img src="img/logo.png" alt=""></a>
+            <a class="logo" href="index.html"><img src="img/logo.png" alt="LOGO"></a>
             <ul>
                 <li><a class="active" href="index.html">Home</a></li>
                 <li class="dropdown">
