--- a/Subject-wise/subject.html
+++ b/Subject-wise/subject.html
@@ -6,6 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Research Grants searching site</title>
+
+    <link rel = "icon" href = "../img/favicon.png">
+
     <script src="https://kit.fontawesome.com/6a059858c5.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="../same.css">
@@ -18,7 +21,7 @@
             <label for="check uncheck1" class="checkbtn">
                 <i class="fa-solid fa-bars"></i>
             </label>
-            <a class="logo" href="../index.html">AICTE</a>
+            <a class="logo" href="../index.html"><img src="../img/logo.png" alt="LOGO"></a>
             <ul>
                 <li><a class="active" href="../index.html">Home</a></li>
                 <li class="dropdown">
