--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
 </head>
 
 <body>
+    <div class="cursor"></div>
+    <div class="follow_cursor"></div>
     <header>
         <nav class="navbar">
             <input type="checkbox" id="check">
